crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_backoff_constant_sequence.snap
---
source: crates/shipper-core/src/runtime/execution/mod.rs
expression: seq
---
strategy: Constant
base_ms: 500
max_ms: 5000
jitter: 0
delays_ms:
  - 500
  - 500
  - 500
  - 500
  - 500
