crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_backoff_exponential_sequence.snap
---
source: crates/shipper/src/runtime/execution/mod.rs
expression: seq
---
strategy: Exponential
base_ms: 100
max_ms: 5000
jitter: 0
delays_ms:
  - 100
  - 200
  - 400
  - 800
  - 1600
  - 3200
  - 5000
  - 5000
