crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_backoff_immediate_sequence.snap
---
source: crates/shipper/src/runtime/execution/mod.rs
expression: seq
---
strategy: Immediate
base_ms: 100
max_ms: 5000
jitter: 0
delays_ms:
  - 0
  - 0
  - 0
  - 0
  - 0
