crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_classify_already_uploaded.snap
---
source: crates/shipper-core/src/runtime/execution/mod.rs
expression: snap
---
class: permanent
message: permanent failure (fix required)
