crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_classify_network_reset.snap
---
source: crates/shipper/src/runtime/execution/mod.rs
expression: snap
---
class: retryable
message: transient failure (retryable)
