crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_classify_network_timeout.snap
---
source: crates/shipper-core/src/runtime/execution/mod.rs
expression: snap
---
class: retryable
message: transient failure (retryable)
