crates/shipper-core/src/runtime/execution/snapshots/shipper_core__runtime__execution__tests__snapshots__snapshot_classify_unknown_error.snap
---
source: crates/shipper-core/src/runtime/execution/mod.rs
expression: snap
---
class: ambiguous
message: publish outcome ambiguous; registry did not show version
